[package]
name = "farm_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { version = "0.16.1" }
winit = { version = "0.28.6" }
pollster = { version = "0.3.0" }
bytemuck = { version = "1.13.1", features = ["derive"] }
image = { version = "0.24.6" }
ecs = { git = "https://github.com/mega-kai/ECS.git" }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = { version = "1.0.96" }
